[gd_scene load_steps=14 format=3 uid="uid://dli3llnr624g8"]

[ext_resource type="Script" uid="uid://wt1yqfn0pitn" path="res://Roomba/romba.gd" id="1_glfoj"]
[ext_resource type="Texture2D" uid="uid://b1momcp57i2jb" path="res://Roomba/Animations/Move/Romba-move_0001.png" id="2_7tp8s"]
[ext_resource type="Texture2D" uid="uid://cnd8julr88emb" path="res://Roomba/Animations/Attack/Romba-attack_0001.png" id="2_hkcq7"]
[ext_resource type="Texture2D" uid="uid://sdwagpack2i8" path="res://Roomba/Animations/Attack/Romba-attack_0002.png" id="3_hiwh1"]
[ext_resource type="Texture2D" uid="uid://bujufxk53llow" path="res://Roomba/Animations/Move/Romba-move_0002.png" id="3_mp5xd"]
[ext_resource type="Texture2D" uid="uid://ll5fk15lyl2m" path="res://Roomba/Animations/Attack/Romba-attack_0003.png" id="4_5art0"]
[ext_resource type="Texture2D" uid="uid://dwq70tlojm5b" path="res://Roomba/Animations/Move/Romba-move_0003.png" id="4_363cd"]
[ext_resource type="Texture2D" uid="uid://bg1nyica7ptwi" path="res://Roomba/Animations/Attack/Romba-attack_0004.png" id="5_fmjuq"]
[ext_resource type="Texture2D" uid="uid://bj7s86skfqt3c" path="res://Roomba/Animations/Attack/Romba-attack_0005.png" id="6_h4hds"]
[ext_resource type="Texture2D" uid="uid://nhepopcrdbak" path="res://Roomba/Animations/Attack/Romba-attack_0006.png" id="7_ymans"]

[sub_resource type="SpriteFrames" id="SpriteFrames_w720y"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": ExtResource("7_ymans")
}, {
"duration": 2.0,
"texture": ExtResource("2_hkcq7")
}, {
"duration": 2.0,
"texture": ExtResource("3_hiwh1")
}, {
"duration": 2.0,
"texture": ExtResource("4_5art0")
}, {
"duration": 2.0,
"texture": ExtResource("5_fmjuq")
}, {
"duration": 5.0,
"texture": ExtResource("6_h4hds")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7tp8s")
}, {
"duration": 1.0,
"texture": ExtResource("3_mp5xd")
}, {
"duration": 1.0,
"texture": ExtResource("4_363cd")
}, {
"duration": 1.0,
"texture": ExtResource("3_mp5xd")
}],
"loop": true,
"name": &"move",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jmte"]
size = Vector2(124, 54.6667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifear"]
size = Vector2(77.9999, 54.6667)

[node name="Robot" type="Area2D" groups=["Robot"]]
script = ExtResource("1_glfoj")
metadata/_edit_group_ = true

[node name="RobotSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_w720y")
animation = &"move"
frame = 1
frame_progress = 0.888483

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.33333)
shape = SubResource("RectangleShape2D_2jmte")
one_way_collision_margin = 0.0

[node name="TowerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TowerDetector"]
position = Vector2(-25.6667, 5.33333)
shape = SubResource("RectangleShape2D_ifear")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="RobotSprite" to="." method="_on_robot_sprite_animation_finished"]
[connection signal="area_entered" from="TowerDetector" to="." method="_on_tower_detector_area_entered"]
[connection signal="area_exited" from="TowerDetector" to="." method="_on_tower_detector_area_exited"]
